[package]
name = "tweak-code"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
minreq = { version = "2.3.0", features = ["https-rustls", "json-using-serde"] }
clap = { version = "3.0.0", features = ["derive"] }
prettyplease = "0.2"
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"

